--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,9 @@
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.12.2",
+    "jwt-decode": "^4.0.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
