--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=CallOfSweets
 jwt.secret=hooooojeaGiripocaVaipiarVaiVaiPiarAnoiteInteiraAiAi
 jwt.expiration=86400000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false&verifyServerCertificate=false
+//spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false&verifyServerCertificate=false
+spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=true&requireSSL=true&trustServerCertificate=true
 spring.datasource.username=myuser
 spring.datasource.password=secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
