--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.12.2",
+    "framer-motion": "^12.19.2",
     "jwt-decode": "^4.0.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "react-router-dom": "^7.6.0",
+    "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.1.7"
