--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,14 +1,75 @@
+# ===============================
+# = APLICAÇÃO
+# ===============================
 spring.application.name=CallOfSweets
-jwt.secret=hooooojeaGiripocaVaipiarVaiVaiPiarAnoiteInteiraAiAi
-jwt.expiration=86400000
+server.port=8081
+server.error.include-message=always
+server.error.include-binding-errors=always
 
-//spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=false&verifyServerCertificate=false
-spring.datasource.url=jdbc:mysql://localhost:3306/mydatabase?useSSL=true&requireSSL=true&trustServerCertificate=true
-spring.datasource.username=myuser
-spring.datasource.password=secret
+# ===============================
+# = DATASOURCE / JPA
+# ===============================
+# Configuração do banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3307/mydatabase?useSSL=true&requireSSL=true&verifyServerCertificate=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=America/Sao_Paulo
+spring.datasource.username=${DB_USER:myuser}
+spring.datasource.password=${DB_PASSWORD:secret}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
 
+# Configurações JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
+spring.jpa.open-in-view=false
+
+# ===============================
+# = SEGURANÇA / JWT
+# ===============================
+jwt.secret=${JWT_SECRET:hooooojeaGiripocaVaipiarVaiVaiPiarAnoiteInteiraAiAi}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+# 86400000 = 24 horas em milissegundos
+
+# ===============================
+# = FLYWAY
+# ===============================
 spring.flyway.enabled=false
+# spring.flyway.locations=classpath:db/migration
+# spring.flyway.baseline-on-migrate=true
+
+# ===============================
+# = LOGGING
+# ===============================
+logging.level.root=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate=INFO
+logging.level.com.callofsweets=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# ===============================
+# = ACTUATOR
+# ===============================
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+
+# ===============================
+# = CACHE
+# ===============================
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
+
+# ===============================
+# = OUTROS
+# ===============================
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=America/Sao_Paulo
+
+# Configuração CORS
+spring.webmvc.cors.allowed-origins=http://localhost:5173
+spring.webmvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
+spring.webmvc.cors.allowed-headers=*
+spring.webmvc.cors.allow-credentials=true
+spring.webmvc.cors.max-age=3600
