corrigindo telas, implementado back ml,corrigindo bairo do adress, add actuator para visualizar dados do mysql docker

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,10 @@
-DB_NAME=mydatabase
+# ============= DATABASE ============
 DB_USER=myuser
 DB_PASSWORD=secret
-DB_ROOT_PASSWORD=verysecret
-DB_PORT=3307
-ADMINER_PORT=8080
-TZ=America/Sao_Paulo
+
+# ============= JWT ================
+JWT_SECRET=hooooojeaGiripocaVaipiarVaiVaiPiarAnoiteInteiraAiAi
+JWT_EXPIRATION=86400000
+
+# ========== MERCADO PAGO ==========
+MERCADOPAGO_ACCESS_TOKEN=APP_USR-5573263634505363-070115-a22a92f6e39b9fce8c6900980aa57780-230665013
