--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # ===============================
-# = APLICAÇÃO
+# = APLICA??O
 # ===============================
 spring.application.name=CallOfSweets
 server.port=8081
@@ -9,7 +9,7 @@ server.error.include-binding-errors=always
 # ===============================
 # = DATASOURCE / JPA
 # ===============================
-# Configuração do banco de dados MySQL
+# Configura??o do banco de dados MySQL
 spring.datasource.url=jdbc:mysql://localhost:3307/mydatabase?useSSL=true&requireSSL=true&verifyServerCertificate=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=America/Sao_Paulo
 spring.datasource.username=${DB_USER:myuser}
 spring.datasource.password=${DB_PASSWORD:secret}
@@ -18,7 +18,7 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.connection-timeout=30000
 
-# Configurações JPA
+# Configura??es JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -27,7 +27,7 @@ spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
 spring.jpa.open-in-view=false
 
 # ===============================
-# = SEGURANÇA / JWT
+# = SEGURAN?A / JWT
 # ===============================
 jwt.secret=${JWT_SECRET:hooooojeaGiripocaVaipiarVaiVaiPiarAnoiteInteiraAiAi}
 jwt.expiration=${JWT_EXPIRATION:86400000}
@@ -67,9 +67,11 @@ spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
 spring.jackson.date-format=yyyy-MM-dd
 spring.jackson.time-zone=America/Sao_Paulo
 
-# Configuração CORS
+# Configura??o CORS
 spring.webmvc.cors.allowed-origins=http://localhost:5173
 spring.webmvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.webmvc.cors.allowed-headers=*
 spring.webmvc.cors.allow-credentials=true
 spring.webmvc.cors.max-age=3600
+
+mercadopago.access.token=APP_USR-5573263634505363-070115-a22a92f6e39b9fce8c6900980aa57780-230665013
