--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/pacifico": "^5.2.5",
     "@fontsource/poppins": "^5.2.6",
+    "@mercadopago/sdk-react": "^1.0.3",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.7",
